; ModuleID = '/home/carl/AnghaBench/redis/src/extr_quicklist.c_quicklistPop.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_quicklist.c_quicklistPop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@_quicklistSaver = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @quicklistPop(%struct.TYPE_4__* %0, i32 %1, i8** %2, i32* %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8** %2, i8*** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64* %4, i64** %11, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %45

21:                                               ; preds = %5
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @_quicklistSaver, align 4
  %25 = call i32 @quicklistPopCustom(%struct.TYPE_4__* %22, i32 %23, i8** %12, i32* %13, i64* %14, i32 %24)
  store i32 %25, i32* %15, align 4
  %26 = load i8**, i8*** %9, align 8
  %27 = icmp ne i8** %26, null
  br i1 %27, label %28, label %31

28:                                               ; preds = %21
  %29 = load i8*, i8** %12, align 8
  %30 = load i8**, i8*** %9, align 8
  store i8* %29, i8** %30, align 8
  br label %31

31:                                               ; preds = %28, %21
  %32 = load i64*, i64** %11, align 8
  %33 = icmp ne i64* %32, null
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i64, i64* %14, align 8
  %36 = load i64*, i64** %11, align 8
  store i64 %35, i64* %36, align 8
  br label %37

37:                                               ; preds = %34, %31
  %38 = load i32*, i32** %10, align 8
  %39 = icmp ne i32* %38, null
  br i1 %39, label %40, label %43

40:                                               ; preds = %37
  %41 = load i32, i32* %13, align 4
  %42 = load i32*, i32** %10, align 8
  store i32 %41, i32* %42, align 4
  br label %43

43:                                               ; preds = %40, %37
  %44 = load i32, i32* %15, align 4
  store i32 %44, i32* %6, align 4
  br label %45

45:                                               ; preds = %43, %20
  %46 = load i32, i32* %6, align 4
  ret i32 %46
}

declare dso_local i32 @quicklistPopCustom(%struct.TYPE_4__*, i32, i8**, i32*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
